@@ -1,3 +1,5 @@
+2010-08-25
+ - YOU HAVE OUTCOMMENTED THE NON-LOCAL CONTRIBUTIONS TO THE SECOND-ORDER DERIVATIVE OF THE ENERGY !!!!!
 2010-08-11
  - Bug 1: error in the eigenvalue term of the SternheimerOperator
  - Bug 2: density on the fine grid constructed from the non-mixed coarse density
